[package]
name = "noteable"
version = "0.1.0"
description ="still in alpha!"
authors = ["Toby Devlin <toby@tobydevlin.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
config = { version = "0.13.1", features = ["toml"] }
dirs = "4.0.0"
